--- a/style.css
+++ b/style.css
@@ -82,7 +82,10 @@ body {
 }
 
 .contador{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    
 }
 
 .contador-digito{
